--- a/doc/Makefile
+++ b/doc/Makefile
@@ -13,6 +13,14 @@ all:
 	dvips _template
 	ps2pdf _template.ps $(OUTFILE).pdf
 
+tex:
+	latex -shell-escape _template.tex
+	bibtex _template
+	latex -shell-escape _template.tex
+	latex -shell-escape _template.tex
+	dvips _template
+	ps2pdf _template.ps $(OUTFILE).pdf
+
 clean:
 	rm -rf _cites.md
 	rm -rf meta/content.tex
